syntax = "proto3";
package etrs.proto;

message BotArm{
    enum Mode{
        Angle = 0;
        COORDINATE = 1;
    }
    bytes data_buffer = 1;
}
